--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,11 @@
 	margin-bottom: 25px;
 	position: relative;
 }
+.b-3 .catalog .image a {
+	display: block;
+	width: 100%;
+	height: 100%;
+} 
 .b-3 .catalog .image img {
 	display: block;
 	position: absolute;
@@ -220,7 +225,7 @@
 	width: 19px;
 	height: 19px;
 	position: absolute;
-	top: 0;
+	top: 5px;
 	right: 0;
 }
 .b-3 .catalog .text .more-i img {
@@ -480,5 +485,8 @@
 	.b-3 .catalog li {
 		width: 100%;
 		border-color: rgb(227, 228, 227);
+	}
+	.b-3 .catalog .add-ingr {
+		text-align: center;
 	}
 }
