--- a/css/index.css
+++ b/css/index.css
@@ -77,6 +77,7 @@
 .b-2-text {
 	display: inline-block;
 	vertical-align: bottom;
+	position: relative;
 	box-sizing: border-box;
 	font-family: 'FuturaFuturisLightC';
 	color: #ffffff;
@@ -90,12 +91,22 @@
 .b-2-image {
 	display: inline-block;
 	vertical-align: bottom;
+	position: relative;
 	width: 200px;
 }
 .b-2-image  img {
 	display: block;
 	margin: 0 auto;
 	max-width: 100%;
+}
+.b-2-border {
+	position: absolute;
+	width: calc(100% - 110px);
+	height: calc(100% - 200px);
+	box-sizing: border-box;
+	border: 4px solid rgb(56, 58, 58);
+	bottom: 71px;
+	right: 30px;
 }
 
 .b-3 .b-block {
@@ -448,6 +459,9 @@
 		padding: 0 30px;
 		background-position: 35% center;
 	}
+	.b-2-border {
+		height: calc(100% - 130px);
+	}
 	.b-3-list li span {
 		text-align: left;
 	}
@@ -473,6 +487,9 @@
 		width: 100%;
 		margin: 0 auto 20px;
 		padding: 30px 20px;
+	}
+	.b-2-border {
+		display: none;
 	}
 	.b-3-list {
 		margin-bottom: 40px;
