--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 .b-1-slider {
 	position: relative;
-	padding-bottom: 40px;
 }
 .b-1-slider .slick-dots {
 	display: block;
@@ -57,6 +56,20 @@
 	background-repeat: no-repeat;
 	background-image: url('../i/b-1-fon.jpg');
 	text-align: left;
+	position: relative;
+	overflow: hidden;
+}
+.b-1-slide::before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 60px;
+	background-color: #ffffff;
+	border-radius: 50%;
+	position: absolute;
+	bottom: -30px;
+	left: 0;
+	z-index: 1;
 }
 .b-1 .b-block {
 	padding-top: 170px;
