--- a/css/index.css
+++ b/css/index.css
@@ -62,13 +62,13 @@
 .b-1-slide::before {
 	content: '';
 	display: block;
-	width: 100%;
+	width: 120%;
 	height: 60px;
 	background-color: #ffffff;
 	border-radius: 50%;
 	position: absolute;
-	bottom: -30px;
-	left: 0;
+	bottom: -40px;
+	left: -10%;
 	z-index: 1;
 }
 .b-1 .b-block {
