--- a/css/order-2.css
+++ b/css/order-2.css
@@ -22,6 +22,7 @@ body {
 	font-size: 48px;
 	color: rgb(35, 31, 32);
 	line-height: 1.2;
+	text-transform: uppercase;
 	margin-bottom: 70px;
 }
 .b-1-select {
