--- a/css/order-1.css
+++ b/css/order-1.css
@@ -1,3 +1,7 @@
+.header.active {
+	position: absolute;
+	border: 0;
+}
 .header-top-right {
 	display: none;
 }
@@ -43,6 +47,9 @@ body {
 	color: rgb(122, 128, 128);
 	text-align: center;
 	margin-right: 60px;
+	-webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	-ms-transition: all 0.3s;
@@ -56,6 +63,9 @@ body {
 .b-1 .promo-block input:focus::-moz-placeholder          {color:transparent;}
 .b-1 .promo-block input:focus:-moz-placeholder           {color:transparent;}
 .b-1 .promo-block input:focus:-ms-input-placeholder      {color:transparent;}
+.b-1 .promo-block input:focus, .b-1 .promo-block input:hover {
+	border-color: rgb(255, 93, 36);
+}
 .b-1 .promo-block button {
 	display: inline-block;
 	vertical-align: middle;
@@ -99,7 +109,7 @@ body {
 	margin-bottom: 0;
 }
 .b-1 .order-list .left-part {
-	max-width: 33%;
+	width: 50%;
 }
 .b-1 .order-list .name {
 	text-align: left;
@@ -236,6 +246,8 @@ body {
 	font-family: 'FuturaDemi';
 	color: rgb(35, 31, 32);
 	line-height: 1.2;
+	text-align: right;
+	width: 20%;
 }
 .b-1 .dobavki-title {
 	text-align: left;
@@ -295,7 +307,7 @@ body {
 }
 .b-1 .dobavki-list .dop-col {
 	display: none;
-	margin-bottom: 10px;
+	margin-top: 10px;
 }
 .b-1 .dobavki-list .dop-col.active {
 	display: block;
@@ -371,14 +383,14 @@ body {
 	font-size: 24px;
 }
 .b-1 .dobavki-list .price-wrap {
-    display: flex;
+    /*display: flex;
     display: -ms-flex;
-    display: -webkit-flex;
+    display: -webkit-flex;*/
     width: 100%;
     box-sizing: border-box;
-    align-items: center;
+    /*align-items: center;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: wrap;*/
 }
 .b-1 .dobavki-list .price {
     font-family: 'FuturaDemi';
@@ -392,6 +404,7 @@ body {
     box-sizing: border-box;
     width: 30px;
     height: 30px;
+    margin: 10px auto 0;
     border: 1px solid rgb(255, 93, 36);
     background-color: transparent;
     border-radius: 4px;
@@ -429,6 +442,7 @@ body {
     transition: all 0.3s;
 }
 .b-1 .dobavki-list .dobavki-add.active {
+	display: none;
     background-color: rgb(255, 93, 36);
 }
 .b-1 .dobavki-list .dobavki-add.active::before, .b-1 .dobavki-list .dobavki-add.active::after {
@@ -501,6 +515,9 @@ body {
 		width: 100%;
 		margin-bottom: 20px;
 	}
+	.b-1 .order-list .price {
+		width: auto;
+	}
 	.b-1 .dobavki-list li {
 		width: 50%;
 	}
@@ -515,5 +532,10 @@ body {
 	}
 	.b-1 .result-wrap .result-btn {
 		margin: 0 auto;
+	}
+}
+@media screen and (max-width: 500px){
+	.b-1 .dobavki-list li {
+		width: 100%;
 	}
 }
