--- a/css/layout.css
+++ b/css/layout.css
@@ -510,6 +510,26 @@ button:hover {
     background-color: rgb(228, 68, 12);
 }
 
+.header-back-btn {
+    display: none;
+    position: absolute;
+    top: 13px;
+    left: 50%;
+    padding: 10px 20px;
+    border: 1px solid rgb(255, 93, 36);
+    border-radius: 4px;
+    font-family: 'FuturaDemi';
+    font-size: 18px;
+    color: rgb(255, 93, 36);
+    white-space: nowrap;
+    box-sizing: border-box;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+
 .footer {
     background-color: rgb(248, 248, 248);
 }
