--- a/css/order-1.css
+++ b/css/order-1.css
@@ -507,7 +507,16 @@ body {
 	}
 }
 @media screen and (max-width: 767px){
+	body {
+		padding-top: 69px;
+	}
+	.header {
+		display: none;
+	}
 	.header-bottom {
+		display: block;
+	}
+	.header-back-btn {
 		display: block;
 	}
 	.b-1 .promo-block input {
