--- a/css/contacts.css
+++ b/css/contacts.css
@@ -15,9 +15,9 @@
 	margin-bottom: 50px;
 }
 .b-1 .info .info-name {
-	font-family: 'FuturaDemi';
+	font-family: 'DIN Condensed';
 	color: rgb(255, 93, 36);
-	font-size: 24px;
+	font-size: 30px;
 	line-height: 1.2;
 	margin-bottom: 40px;
 }
