--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,8 @@
 }
 .b-1 h2 {
 	display: block;
-	font-size: 56px;
+	font-size: 57px;
+	line-height: 1.2;
 	color: #ffffff;
 	font-family: 'DIN Condensed';
 	text-transform: uppercase;
@@ -97,7 +98,7 @@
 	font-size: 18px;
 	line-height: 1.3;
 	padding: 80px 100px;
-	background-color: rgb(231, 62, 29);
+	background-color: rgb(255, 93, 36);
 	margin-right: 100px;
 	width: calc(100% - 305px);
 }
@@ -454,11 +455,12 @@
 	display: block;
 }
 .b-4-text .name {
-	font-family: 'FuturaDemi';
+	font-family: 'DIN Condensed';
 	line-height: 1.2;
 	color: rgb(35, 31, 32);
 	text-align: left;
-	font-size: 24px;
+	font-size: 48px;
+	text-transform: uppercase;
 	margin-bottom: 20px;
 }
 .b-4-text p {
