--- a/css/thanks.css
+++ b/css/thanks.css
@@ -70,17 +70,34 @@
 
 
 @media screen and (max-width: 767px){
-	.b-1-item {
-		width: 100%;
-		margin-bottom: 40px;
+	.b-1 .b-block {
+		padding-top: 30px;
+		padding-bottom: 30px;
+	}
+	.b-1-wrap {
+		min-height: auto;
 	}
 	.b-1-item img {
 		margin: 0 auto;
 	}
+	.b-1-item h1 {
+		font-size: 22px;
+		margin-bottom: 20px;
+	}
 	.b-1-item h1, .b-1-item p {
 		text-align: center;
 	}
+	.b-1-item p {
+		font-size: 14px;
+	}
 	.b-1-item .b-1-back {
-		margin: 50px auto 0;
+		margin: 20px auto 0;
+		font-size: 14px;
+	}
+}
+@media screen and (max-width: 450px){
+	.b-1-item {
+		width: 100%;
+		margin-bottom: 20px;
 	}
 }
