--- a/css/layout.css
+++ b/css/layout.css
@@ -778,6 +778,7 @@ button:hover {
     height: 18px;
     border-radius: 50%;
     overflow: hidden;
+    cursor: pointer;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
